Completed data cleaning for project purposes

--- a/Data Cleaning/DataCleaning.ipynb
+++ b/Data Cleaning/DataCleaning.ipynb
@@ -10,6 +10,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import re\n",
     "\n",
     "ks_df = pd.read_csv('kitchenstories_30102020.csv')\n",
     "pd.set_option('display.max_columns', 100)\n",
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +350,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>canned diced tomatoes</td>\n",
+       "      <td>ned maes</td>\n",
        "      <td>[200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]</td>\n",
        "      <td>[g, g, cloves, g, g, ml, ml, g, g, tsp, tbsp, g]</td>\n",
        "      <td>NaN</td>\n",
@@ -668,7 +669,7 @@
        "      <td>25</td>\n",
        "      <td>0</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>canned crushed tomatoes</td>\n",
+       "      <td>ned crushed maes</td>\n",
        "      <td>[1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...</td>\n",
        "      <td>[tbsp, cloves, g, g, tsp, tsp, g, g, , , ]</td>\n",
        "      <td>NaN</td>\n",
@@ -868,49 +869,27 @@
        "18  Community Member         10         25          0          4.0   \n",
        "19  Community Member         10         25          0          4.0   \n",
        "\n",
-       "                 ingredient  \\\n",
-       "0                     clams   \n",
-       "1                      rice   \n",
-       "2                    garlic   \n",
-       "3           green zucchinis   \n",
-       "4     canned diced tomatoes   \n",
-       "5           vegetable broth   \n",
-       "6                white wine   \n",
-       "7                      dill   \n",
-       "8                 olive oil   \n",
-       "9                      salt   \n",
-       "10                   pepper   \n",
-       "11                   butter   \n",
-       "12                olive oil   \n",
-       "13                    onion   \n",
-       "14                   garlic   \n",
-       "15  canned crushed tomatoes   \n",
-       "16             cream cheese   \n",
-       "17              mixed herbs   \n",
-       "18                     salt   \n",
-       "19                   pepper   \n",
-       "\n",
-       "                                  ingredient_quantity  \\\n",
-       "0    [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "1    [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "2    [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "3    [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "4    [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "5    [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "6    [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "7    [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "8    [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "9    [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "10   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "11   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
-       "12  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
-       "13  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
-       "14  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
-       "15  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
-       "16  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
-       "17  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
-       "18  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
-       "19  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
+       "          ingredient                                ingredient_quantity  \\\n",
+       "0              clams   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "1               rice   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "2             garlic   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "3    green zucchinis   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "4           ned maes   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "5    vegetable broth   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "6         white wine   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "7               dill   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "8          olive oil   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "9               salt   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "10            pepper   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "11            butter   [200, 150, 3, 50, 200, 750, 70, 5, 10, 1, 1, 10]   \n",
+       "12         olive oil  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
+       "13             onion  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
+       "14            garlic  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
+       "15  ned crushed maes  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
+       "16      cream cheese  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
+       "17       mixed herbs  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
+       "18              salt  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
+       "19            pepper  [1.0, 0.5, 3.0, 850.0, 230.0, 0.5, 0.5, 230.0,...   \n",
        "\n",
        "                                     ingredient_unit  calories  protein  \\\n",
        "0   [g, g, cloves, g, g, ml, ml, g, g, tsp, tbsp, g]       NaN      NaN   \n",
@@ -979,7 +958,7 @@
        "19                                      NaN  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1014,14 +993,31 @@
     "# ingredient_info['ingredient_quantity'] = quantity.quantity\n",
     "# ingredient_info['ingredient_unit'] = unit.unit\n",
     "\n",
+    "\n",
     "#Checking what the created dataframe looks like\n",
     "print(ingredient_info.head(20))\n",
     "\n",
-    "# #Dropping ingredient_list, ingredient_quantity, ingredient_unit \n",
+    "\n",
+    "#Dropping ingredient_list, ingredient_quantity, ingredient_unit \n",
     "ks_df_ingredients = ks_df_ingredients.drop('ingredient_list', axis = 1)\n",
     "\n",
-    "# #Merging the two dataframes\n",
+    "\n",
+    "#Merging the two dataframes\n",
     "ks_df_ingredients = pd.merge(ks_df_ingredients, ingredient_info, how = 'right', left_index = True, right_on = 'index')\n",
+    "\n",
+    "\n",
+    "#Additional cleaning of ingredients\n",
+    "rep_chars = 'cup|oz|\\)|\\(|\\-|for|serving|garnish|shaking|bredding|drained|chopped|diced|frying|\\\n",
+    "            ripe|cans|can|marinating|sprinkling|teaspoon|of|additional|or|coating|\\/|msg|fresh|\\\n",
+    "            diced|shaved|toasted|divided|optional|to|serve|taste|deep|frying|dusting|\\d|\\.'\n",
+    "\n",
+    "ks_df_ingredients['ingredient'] = ks_df_ingredients['ingredient'].str.lower()\n",
+    "ks_df_ingredients['ingredient'] = ks_df_ingredients['ingredient'].str.replace(rep_chars,'')\n",
+    "ks_df_ingredients['ingredient'] = ks_df_ingredients['ingredient'].str.strip()\n",
+    "ks_df_ingredients['ingredient'].replace('', np.nan, inplace = True)\n",
+    "ks_df_ingredients.dropna(subset = ['ingredient'], inplace = True)\n",
+    "ks_df_ingredients['ingredient'] = ks_df_ingredients['ingredient'].str.replace(r' +',' ')\n",
+    "\n",
     "\n",
     "#Re-ordering columns to read dataframe easily\n",
     "col_names = ['index', 'dish_name', 'dish_description', 'difficulty', 'rating', 'reviews_for_rating', 'image_count',\n",
@@ -1034,6 +1030,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ks_df_ingredients.to_csv(r'KS_Ingredients_Cleaned.csv', index = False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1043,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
