Final plots added and cleaned up folders for organization purposes.

--- a/Data Cleaning/DataCleaning.ipynb
+++ b/Data Cleaning/DataCleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,27 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Community Member' 'Contributor'\n",
-      " 'Test Kitchen Manager and Chef at Kitchen Stories'\n",
-      " 'Managing Editor at Kitchen Stories' 'Founder at Kitchen Stories'\n",
-      " 'Editors at Kitchen Stories' 'Senior Food Editor at Kitchen Stories'\n",
-      " 'Junior Food Editor at Kitchen Stories'\n",
-      " 'Editor-in-Chief at Kitchen Stories'\n",
-      " 'Associate Food Editor at Kitchen Stories' 'Partner']\n",
-      "\n",
-      "Added author_group with the following values:\n",
-      "\n",
-      "['Community Member' 'Contributor' 'KS Team' 'Partner']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#AUTHOR GROUP \n",
     "\n",
@@ -124,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,8 +136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -245,7 +229,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -274,7 +258,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -303,7 +287,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -332,7 +316,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -361,7 +345,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -390,7 +374,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -419,7 +403,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -448,7 +432,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -477,7 +461,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -506,7 +490,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -535,7 +519,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -564,7 +548,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -593,7 +577,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -622,7 +606,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -651,7 +635,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -680,7 +664,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -709,7 +693,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -738,7 +722,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -767,7 +751,7 @@
        "      <td>1</td>\n",
        "      <td>Palate &amp; Plate</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>35</td>\n",
        "      <td>0</td>\n",
        "      <td>30</td>\n",
@@ -796,7 +780,7 @@
        "      <td>0</td>\n",
        "      <td>mrslovegoodfood</td>\n",
        "      <td>Community Member</td>\n",
-       "      <td>Community Member</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>10</td>\n",
        "      <td>45</td>\n",
        "      <td>0</td>\n",
@@ -885,27 +869,27 @@
        "18                 NaN            1   Palate & Plate  Community Member   \n",
        "19                 1.0            0  mrslovegoodfood  Community Member   \n",
        "\n",
-       "        author_group  prep_time  bake_time  rest_time  total_steps  \\\n",
-       "0   Community Member         35          0         30          8.0   \n",
-       "1   Community Member         35          0         30          8.0   \n",
-       "2   Community Member         35          0         30          8.0   \n",
-       "3   Community Member         35          0         30          8.0   \n",
-       "4   Community Member         35          0         30          8.0   \n",
-       "5   Community Member         35          0         30          8.0   \n",
-       "6   Community Member         35          0         30          8.0   \n",
-       "7   Community Member         35          0         30          8.0   \n",
-       "8   Community Member         35          0         30          8.0   \n",
-       "9   Community Member         35          0         30          8.0   \n",
-       "10  Community Member         35          0         30          8.0   \n",
-       "11  Community Member         35          0         30          8.0   \n",
-       "12  Community Member         35          0         30          8.0   \n",
-       "13  Community Member         35          0         30          8.0   \n",
-       "14  Community Member         35          0         30          8.0   \n",
-       "15  Community Member         35          0         30          8.0   \n",
-       "16  Community Member         35          0         30          8.0   \n",
-       "17  Community Member         35          0         30          8.0   \n",
-       "18  Community Member         35          0         30          8.0   \n",
-       "19  Community Member         10         45          0          9.0   \n",
+       "    author_group  prep_time  bake_time  rest_time  total_steps  \\\n",
+       "0            NaN         35          0         30          8.0   \n",
+       "1            NaN         35          0         30          8.0   \n",
+       "2            NaN         35          0         30          8.0   \n",
+       "3            NaN         35          0         30          8.0   \n",
+       "4            NaN         35          0         30          8.0   \n",
+       "5            NaN         35          0         30          8.0   \n",
+       "6            NaN         35          0         30          8.0   \n",
+       "7            NaN         35          0         30          8.0   \n",
+       "8            NaN         35          0         30          8.0   \n",
+       "9            NaN         35          0         30          8.0   \n",
+       "10           NaN         35          0         30          8.0   \n",
+       "11           NaN         35          0         30          8.0   \n",
+       "12           NaN         35          0         30          8.0   \n",
+       "13           NaN         35          0         30          8.0   \n",
+       "14           NaN         35          0         30          8.0   \n",
+       "15           NaN         35          0         30          8.0   \n",
+       "16           NaN         35          0         30          8.0   \n",
+       "17           NaN         35          0         30          8.0   \n",
+       "18           NaN         35          0         30          8.0   \n",
+       "19           NaN         10         45          0          9.0   \n",
        "\n",
        "                   ingredient  \\\n",
        "0             chicken breasts   \n",
@@ -996,7 +980,7 @@
        "19       NaN  NaN   NaN   NaN    NaN         2                             NaN  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
